# zangetsu-data

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  request.yaml  task.yaml
.github/scripts/: generate_issue_report.py
.github/workflows/: dashboard-generator.yml  issue-report.yml  issue-tracker.yml  publish-github-package.yml  publish.yml  python-test.yml
tests/: conftest.py  test_common_database.py
zangetsu_data/: bigquery.py  common_database.py  postgresql.py  settings.py  spreadsheet.py
